gcc-14.2.0/gcc/testsuite/gdc.test/compilable/emptygenmain.d
version https://git-lfs.github.com/spec/v1
oid sha256:6f3361003000e2c7bbe765947b2a1748a3ac50c2a2b0acbc3e4bd93817c9577a
size 43
